ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hamsterfit-ingress
  namespace: devops-tools
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: hamsterfit.com # Sesuaikan dengan domain yang kamu inginkan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hamsterfit-service
                port:
                  number: 80
